# Var

./: CMakeLists.txt  out.txt  test.html
example/: CMakeLists.txt
example/tcp_measure/: CMakeLists.txt  client.cc  server.cc
include/: Server.h  variable.h
metric/: CMakeLists.txt  average_recorder.h  default_variables.cc  latency_recorder.cc  latency_recorder.h  passive_status.h  reducer.h  server.cc  server.h  service.cc  service.h  status.h  var.h  variable.cc  window.h
metric/builtin/: common.cc  common.h  file_transfer_service.cc  file_transfer_service.h  flamegraph_perl.cc  flamegraph_perl.h  flot_min_js.cc  flot_min_js.h  get_js_service.cc  get_js_service.h  gperftools_profiler.h  heap_profiler_service.cc  heap_profiler_service.h  index_service.cc  index_service.h  inside_cmd_service.cc  inside_cmd_service.h  inside_cmd_status_user.cc  inside_cmd_status_user.h  inside_status_service.cc  inside_status_service.h  jquery_min_js.cc  jquery_min_js.h  log_service.cc  log_service.h  memory_service.cc  memory_service.h  method_status.cc  method_status.h  pprof_perl.cc  pprof_perl.h  profiler_linker.h  profiler_service.cc  profiler_service.h  remote_sampler_service.cc  remote_sampler_service.h  service.h  tcmalloc_extension.cc  vars_service.cc  vars_service.h  (+4 more)
metric/detail/: agent_group.h  combiner.h  percentile.cc  percentile.h  sampler.cc  sampler.h  series.h
metric/util/: cmd_reader_linux.h  dir_reader_linux.h  fast_rand.cc  file_reader_linux.h  linked_list.h  singleton.h  time.h
net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  Endian.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Poller.cc  Poller.h  Socket.cc  Socket.h  SocketsOps.cc  SocketsOps.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h
net/base/: AsyncLogging.h  Atomic.h  BlockingQueue.h  Condition.cc  Condition.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  CurrentThread.h  Date.cc  Date.h  Exception.cc  Exception.h  FileUtil.cc  FileUtil.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  Logging.cc  Logging.h  Mutex.h  ProcessInfo.cc  ProcessInfo.h  StringPiece.h  StringPrintf.cc  StringPrintf.h  StringSplitter.h  StringSplitterInl.h  Thread.cc  Thread.h  TimeZone.cc  TimeZone.h  Timestamp.cc  Timestamp.h  Types.h  WeakCallback.h  copyable.h  noncopyable.h
net/http/: http_context.h  http_header.cc  http_header.h  http_message.cc  http_message.h  http_method.cc  http_method.h  http_parser.cc  http_parser.h  http_server.cc  http_server.h  http_status_code.cc  http_status_code.h  http_url.cc  http_url.h  macros.h
net/pcie/: PCIeGlobal.h  PCIeLoopThread.cc  PCIeLoopThread.h  PCIeServer.cc  PCIeServer.h  XvcServer.cc  XvcServer.h
net/poller/: DefaultPoller.cc  EpollPoller.cc  EpollPoller.h  PollPoller.cc  PollPoller.h
net/tcp/: TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h
net/test/: Buffer_test.cc  CMakeLists.txt  Channel_test.cc  EventLoopThreadPool_test.cc  EventLoopThread_test.cc  EventLoop_test.cc  HttpServer_test.cc  InetAddress_test.cc  TcpClient_test.cc  TcpServer_test.cc  TimerQueue_test.cc  UdpServer_test.cc
net/udp/: NetworkDatagram.h  UdpServer.cc  UdpServer.h
src/: CMakeLists.txt  Server.cc  average_recorder.h  common.h  default_variables.cc  latency_recorder.cc  latency_recorder.h  passive_status.h  reducer.h  server.cc  server.h  service.cc  service.h  status.h  variable.cc  variable.h  window.h
src/builtin/: common.cc  common.h  file_transfer_service.cc  file_transfer_service.h  flot_min_js.cc  get_js_service.cc  get_js_service.h  index_service.cc  index_service.h  inside_cmd_service.cc  inside_cmd_service.h  inside_cmd_status_user.cc  inside_cmd_status_user.h  inside_status_service.cc  inside_status_service.h  log_service.cc  log_service.h  tabbed.h  vars_service.cc  vars_service.h  xvc_service.cc  xvc_service.h
src/detail/: agent_group.h  call_op_returing_void.h  combiner.h  is_atomical.h  percentile.cc  percentile.h  sampler.cc  sampler.h  series.h
src/util/: bounded_queue.h  class_name.h  cmd_reader_linux.h  dir_reader_linux.h  fast_rand.cc  fast_rand.h  fd_guard.h  file_reader_linux.h  move.h  singleton.h  time.h  type_traits.h  vector.h
test/: CMakeLists.txt  agent_combiner_test.cc  agent_group_test.cc  average_recorder_test.cc  dummy_server_test.cc  http_header_test.cc  http_message_test.cc  http_method_test.cc  http_parser_test.cc  http_status_code_test.cc  http_url_test.cc  latency_recorder_test.cc  linked_list_test.cc  passive_status_test.cc  percentile_test.cc  reducer_test.cc  sampler_test.cc  series_test.cc  status_test.cc  string_splitter_test.cc  tcp_measure_test.cc  variable_test.cc  window_test.cc
util/: endian.h  iobuf.cc  iobuf.h  macros.h  string_piece.h
